# openadmet-models

./: .gitignore  .lgtm.yml  .pre-commit-config.yaml  LICENSE  README.md  UNIMOL_INTEGRATION_SUMMARY.md  pyproject.toml  test_anvil_unimol.py  unimol_cyp3a4_demo.py  unimol_demo.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: CI.yaml  CI_integration.yaml  GPU_CI_integration.yaml
data/chembl/: chembl_her2_activities.csv
data/toxcast/: toxcast_ar_assays.csv  toxcast_er_assays.csv  toxcast_er_assays_smiles.csv  toxcast_tr_assays.csv  toxcast_tr_assays_smiles.csv
devtools/conda-envs/: openadmet-models-gpu.yaml  openadmet-models.yaml  openadmet_models.yaml  openadmet_models_gpu.yaml
devtools/containers/: Dockerfile
devtools/scripts/: create_conda_env.py
docs/: anvil_reference.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  requirements.yaml  user_guide.rst
docs/_api/: index.rst
docs/_api/api/: index.rst
docs/_api/cli/: anvil.rst  compare.rst  index.rst  predict.rst
docs/_static/: custom.css
docs/docs/autosummary/: anvil.rst
models/er_model/: er_model.pkl  er_model_metadata.pkl
models/her2_model/: her2_model.pkl  her2_model_metadata.pkl
models/tr_model/: tr_model.pkl  tr_model_metadata.pkl
openadmet/chds/: __init__.py
openadmet/chds/data/: __init__.py  exposome.py
openadmet/chds/endpoints/: __init__.py  developmental.py  endocrine.py  epigenetic.py  multigenerational.py  paternal_transmission.py  prostate_cancer.py  protective_factors.py  transplacental.py
openadmet/chds/workflows/: __init__.py  exposure_target.py  gestational.py
openadmet/models/: drivers.py  export.py  log.py  registries.py
openadmet/models/active_learning/: acquisition.py  committee.py  ensemble_base.py
openadmet/models/anvil/: __init__.py  data_spec.py  specification.py  workflow.py  workflow_base.py
openadmet/models/architecture/: catboost.py  chemprop.py  dummy.py  gat.py  lgbm.py  model_base.py  mtenn.py  nepare.py  rf.py  sklearn_pipeline.py  svm.py  tabpfn.py  unimol.py  xgboost.py
openadmet/models/cli/: anvil.py  cli.py  compare.py  predict.py
openadmet/models/comparison/: compare_base.py  posthoc.py
scripts/: add_smiles_to_toxcast.py  add_smiles_to_toxcast_tr.py  extract_toxcast_er.py  extract_toxcast_tr.py  fetch_her2_chembl.py  predict_tr_chds.py  train_er_model.py  train_tr_model.py
(+215 files in other folders)
